# semantic-versioner

./: .clang-format  CMakeLists.txt  README.md  build.sh  format.sh  semantic_version.cpp  semantic_version.h  semantic_version.t.cpp  semver.m.cpp
